# easy-taskbar-progress

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  compile.ps1
.github/workflows/: release.yml
include/: easy_taskbar_progress.h
src/: main.cpp  main.h  progress.cpp  progress.h
tests/: easy_progressbar.py  main.py
